; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/sbus/char/extr_bbc_i2c.c_set_device_claimage.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/sbus/char/extr_bbc_i2c.c_set_device_claimage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bbc_i2c_bus = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, %struct.of_device* }
%struct.of_device = type { i32 }

@NUM_CHILDREN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bbc_i2c_bus*, %struct.of_device*, i32)* @set_device_claimage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_device_claimage(%struct.bbc_i2c_bus* %0, %struct.of_device* %1, i32 %2) #0 {
  %4 = alloca %struct.bbc_i2c_bus*, align 8
  %5 = alloca %struct.of_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.bbc_i2c_bus* %0, %struct.bbc_i2c_bus** %4, align 8
  store %struct.of_device* %1, %struct.of_device** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  br label %8

8:                                                ; preds = %33, %3
  %9 = load i32, i32* %7, align 4
  %10 = load i32, i32* @NUM_CHILDREN, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %36

12:                                               ; preds = %8
  %13 = load %struct.bbc_i2c_bus*, %struct.bbc_i2c_bus** %4, align 8
  %14 = getelementptr inbounds %struct.bbc_i2c_bus, %struct.bbc_i2c_bus* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = load i32, i32* %7, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i64 %17
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 1
  %20 = load %struct.of_device*, %struct.of_device** %19, align 8
  %21 = load %struct.of_device*, %struct.of_device** %5, align 8
  %22 = icmp eq %struct.of_device* %20, %21
  br i1 %22, label %23, label %32

23:                                               ; preds = %12
  %24 = load i32, i32* %6, align 4
  %25 = load %struct.bbc_i2c_bus*, %struct.bbc_i2c_bus** %4, align 8
  %26 = getelementptr inbounds %struct.bbc_i2c_bus, %struct.bbc_i2c_bus* %25, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = load i32, i32* %7, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i64 %29
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  store i32 %24, i32* %31, align 8
  br label %36

32:                                               ; preds = %12
  br label %33

33:                                               ; preds = %32
  %34 = load i32, i32* %7, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %7, align 4
  br label %8

36:                                               ; preds = %23, %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
